--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-fast-marquee": "^1.6.5",
     "sonner": "^2.0.7",
     "xlsx": "^0.18.5"
   },
